--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <meta charset="utf-8" />
-    <title>MANIP: Integrating Interactive Perception into Long-Horizon Robot Manipulation Systems</title>
+    <title>POGS: Persistent Object Gaussian Splat for Tracking Human and Robot Manipulation of Irregularly Shaped Objects</title>
 
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
