--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://el-refai.github.io" target="_blank" class="author-text">
                         Karim El-Refai
                         <span class="text-star">* 1</span>
                     </a>
@@ -110,4 +110,10 @@
             </div>
             <div class="title-row">
                 <h2 class="subheader">Under Review for ICRA 2025</h1>
+            
+            <br>
+            <video controls width="800px">              
+                <source src="media/supp_vid.mp4" type="video/mp4" />
+            </video>
+            <br>
             
