--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             
             <br>
             <video controls width="800px">              
-                <source src="media/supp_vid.mp4" type="video/mp4" />
+                <source src="media/POGS_supp_vid_updated.mp4" type="video/mp4" />
             </video>
             <br>
             
