pogs website video autoplay

--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
             <div class="title-row">
                 <h2 class="subheader">ICRA 2025</h1>
             
-            <br>
-            <video controls width="800px">              
-                <source src="media/POGS_supp_vid_updated.mp4" type="video/mp4" />
-            </video>
-            <br>
+            </div>
             <div class="link-labels base-row">
                 <!-- TODO: Update arxiv link -->
                 <div class="base-col icon-col"><a href="" target="_blank"
@@ -130,7 +126,13 @@
                     <strong class="link-labels-text">Code</strong>
                 </div>
             </div>
-            
+
+            <br>
+            <video controls autoplay loop width="800px">              
+                <source src="media/POGS_supp_vid_updated.mp4" type="video/mp4" />
+            </video>
+            <br>
+
             <br>
             <div class="base-row add-top-padding">
                 <h1 id="abstract">Overview</h1>
