--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <!-- <div id="results-carousel" class="carousel results-carousel"> -->
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./media/supp_vid.mp4"
+            <source src="./media/tool-in-gripper-servoing.mp4"
                     type="video/mp4">
           </video>
         </div>
