--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">POGS: Persistent Object Gaussian Splat for Tracking Human and Robot Manipulation of Irregularly Shaped Objectss</h1>
+          <h1 class="title is-1 publication-title">POGS: Persistent Object Gaussian Splat for Tracking Human and Robot Manipulation of Irregularly Shaped Objects</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://uynitsuj.github.io">Justin Yu</a><sup>*1</sup>,</span>
