center second video

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">POGS</span> persistently tracks object states in the real world robot workspace.
+        <span class="dnerf"><b>POGS</b></span> persistently tracks object states in the real world robot workspace.
       </h2>
     </div>
   </div>
@@ -188,14 +188,14 @@
 
 <section class="hero is-light is-small">
   <div class="hero-body">
-    <div class="container">
+    <div class="container is-centered">
       <!-- <div id="results-carousel" class="carousel results-carousel"> -->
-        <div class="item item-steve">
+        <!-- <div class="item item-steve"> -->
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
             <source src="./media/tool-in-gripper-servoing.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        <!-- </div> -->
         <!-- <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/chair-tp.mp4"
