--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="container is-centered">
       <!-- <div id="results-carousel" class="carousel results-carousel"> -->
         <!-- <div class="item item-steve"> -->
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="steve" autoplay muted loop playsinline height="100%">
             <source src="./media/tool-in-gripper-servoing.mp4"
                     type="video/mp4">
           </video>
