change centering style

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 <section class="hero is-light is-small">
   <div class="hero-body">
-    <div class="container is-centered">
+    <div class="container is-max-desktop">
       <!-- <div id="results-carousel" class="carousel results-carousel"> -->
         <!-- <div class="item item-steve"> -->
           <video poster="" id="steve" autoplay muted loop playsinline height="100%">
