--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
               <a href="">Chung-Min Kim</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="">Richard Cheng</a><sup>2</sup>
+              <a href="">Richard Cheng</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="">Muhammad Zubair Irshad</a><sup>2</sup>
+              <a href="">Muhammad Zubair Irshad</a><sup>2</sup>,
             </span>
             <span class="author-block">
                <a href="">Ken Goldberg</a><sup>1</sup>
