add paper pdf link

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://drive.google.com/file/d/1uR1bvCrNTakEapau5PEK3wS_5dAHfQGG/view?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper (Coming Soon)</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <span class="link-block">
@@ -280,7 +280,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{yu2025pogs,
   author    = {Yu, Justin and Hari, Kush and El-Refai, Karim and Dalil, Arnav and Kerr, Justin and Kim, Chung-Min and Cheng, Richard, and Irshad, Muhammad Z. and Goldberg, Ken},
-  title     = {POGS: Persistent Object Gaussian Splat for Tracking Human and Robot Manipulation of Irregularly Shaped Objects},
+  title     = {Persistent Object Gaussian Splat (POGS) for Tracking Human and Robot Manipulation of Irregularly Shaped Objects},
   journal   = {ICRA},
   year      = {2025},
 }</code></pre>
