--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/file/d/1uR1bvCrNTakEapau5PEK3wS_5dAHfQGG/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1uR1bvCrNTakEapau5PEK3wS_5dAHfQGG/view?usp=sharing" target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -145,7 +145,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/uynitsuj/pogs"
+                <a href="https://github.com/uynitsuj/pogs" target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
