--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <span class="author-block">
               <a href="">Kush Hari</a><sup>*1</sup>,</span>
             <span class="author-block">
-              <a href="">Karim El-Refai</a><sup>*1</sup>,
+              <a href="https://el-refai.github.io/">Karim El-Refai</a><sup>*1</sup>,
             </span>
             <span class="author-block">
               <a href="">Arnav Dalil</a><sup>1</sup>,
@@ -135,12 +135,12 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2503.05189"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (Coming Soon)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Code Link. -->
