--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   display: flex;
                   flex-direction: row;
                   width: 100%;
-                  justify-content: center;
+                  justify-content: left;
                   align-items: center;
               }
 
