--- a/index.html
+++ b/index.html
@@ -321,12 +321,29 @@
               }
 
               /* Iframe container */
-              .iframe-container {
+              /* .iframe-container {
                   position: relative;
                   width: 100%;
                   max-width: 960px;
                   height: 540px;
                   margin: 0 auto;
+              } */
+
+              .iframe-container {
+                  position: relative;
+                  width: 100%;
+                  max-width: 1200px;
+                  height: 640px;
+                  margin: 30px auto;
+                  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+                  border-radius: 8px;
+                  overflow: hidden;
+                  transition: all 0.3s ease;
+              }
+
+              .iframe-container:hover {
+                  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+                  transform: translateY(-3px);
               }
 
               .iframe {
