rm scroll btns and change iframe container height

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   position: relative;
                   width: 100%;
                   max-width: 1200px;
-                  height: 640px;
+                  height: 490px;
                   margin: 30px auto;
                   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
                   border-radius: 8px;
@@ -476,7 +476,7 @@
       
           <!-- Thumbnail Navigation -->
           <div class="thumbnail-container" style="display: inline-block">
-              <button class="slide-arrow" id="slide-arrow-prev" onclick="slideLeft()">‹</button>
+              <!-- <button class="slide-arrow" id="slide-arrow-prev" onclick="slideLeft()">‹</button> -->
               <div class="thumbnail-row" id="thumbnails-scroll">
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn active-btn" id="thumb-0" onclick="showIframe('drill_scene1')">
@@ -592,7 +592,7 @@
                   </div>
 
               </div>
-              <button class="slide-arrow" id="slide-arrow-next" onclick="slideRight()">›</button>
+              <!-- <button class="slide-arrow" id="slide-arrow-next" onclick="slideRight()">›</button> -->
           </div>
           <style>
             /* Thumbnail navigation with proper alignment */
