--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <a href="https://el-refai.github.io/">Karim El-Refai</a><sup>*1</sup>,
             </span>
             <span class="author-block">
-              <a href="">Arnav Dalil</a><sup>1</sup>,
+              <a href="">Arnav Dalal</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="">Justin Kerr</a><sup>1</sup>,
@@ -175,7 +175,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./media/POGSMethod.mp4"
+        <source src="./media/pogs_final_supp_vid_trim1.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
@@ -192,7 +192,7 @@
       <!-- <div id="results-carousel" class="carousel results-carousel"> -->
         <!-- <div class="item item-steve"> -->
           <video poster="" id="steve" autoplay muted loop playsinline height="100%">
-            <source src="./media/tool-in-gripper-servoing.mp4"
+            <source src="./media/pogs_final_supp_vid_trim2.mp4"
                     type="video/mp4">
           </video>
         <!-- </div> -->
@@ -382,8 +382,8 @@
               }
               .thumbnail-container {
                   width: 100%;
-                  max-width: 960px;
-                  margin: 15px auto;
+                  /* max-width: 960px; */
+                  /* margin: 15px auto; */
                   display: flex;
                   flex-direction: row;
                   align-items: center;
