--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
             <source src="./media/pogs_final_supp_vid_trim2.mp4"
                     type="video/mp4">
           </video>
+          <h2 class="subtitle has-text-centered">
+            <span class="dnerf"><b>POGS</b></span> allows robots to react and adapt to changes in manipulated object states.
+          </h2>
         <!-- </div> -->
         <!-- <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
