--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <div class="container is-max-desktop">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column">
         <h2 class="title is-3">Results</h2>
         <div class="base-row add-top-padding">
           <style>
