--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                   margin-top: 15px;
               }
               .thumbnail-container {
-                  width: 100%;
+                  /* width: 100%; */
                   /* max-width: 960px; */
                   /* margin: 15px auto; */
                   display: flex;
