--- a/index.html
+++ b/index.html
@@ -482,112 +482,112 @@
               <div class="thumbnail-row" id="thumbnails-scroll">
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn active-btn" id="thumb-0" onclick="showIframe('drill_scene1')">
-                          <img src="./media/thumbnails/drill_scene1.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/drill_scene1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Drill #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-1" onclick="showIframe('drill_scene2')">
-                          <img src="./media/thumbnails/drill_scene2.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/drill_scene2.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Drill #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-2" onclick="showIframe('drill_scene3')">
-                          <img src="./media/thumbnails/drill_scene3.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/drill_scene3.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Drill #3 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-3" onclick="showIframe('drill_scene4')">
-                          <img src="./media/thumbnails/drill_scene4.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/drill_scene4.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Drill #4 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-4" onclick="showIframe('iron_shelf_pick1')">
-                          <img src="./media/thumbnails/iron_shelf_pick1.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/iron_shelf_pick1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Iron Shelf Pick #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-5" onclick="showIframe('iron_shelf_place1')">
-                          <img src="./media/thumbnails/iron_shelf_place1.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/iron_shelf_place1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Iron Shelf Place #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-6" onclick="showIframe('iron_shelf_pick2')">
-                          <img src="./media/thumbnails/iron_shelf_pick2.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/iron_shelf_pick2.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Iron Shelf Pick #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-7" onclick="showIframe('iron_shelf_place2')">
-                          <img src="./media/thumbnails/iron_shelf_place2.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/iron_shelf_place2.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Iron Shelf Place #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-8" onclick="showIframe('shoe_shoebox_pick1')">
-                          <img src="./media/thumbnails/shoe_shoebox_pick1.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/shoe_shoebox_pick1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Shoe Shoebox Pick #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-9" onclick="showIframe('shoe_shoebox_place1')">
-                          <img src="./media/thumbnails/shoe_shoebox_place1.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/shoe_shoebox_place1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Shoe Shoebox Place #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-10" onclick="showIframe('shoe_shoebox_pick2')">
-                        <img src="./media/thumbnails/shoe_shoebox_pick2.jpg" alt="Item 1" class="thumbnails">
+                        <img src="./media/thumbnails/shoe_shoebox_pick2.jpeg" alt="Item 1" class="thumbnails">
                         <!-- <br> 
                           Shoe Shoebox Pick #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-11" onclick="showIframe('shoe_shoebox_place2')">
-                          <img src="./media/thumbnails/shoe_shoebox_place2.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/shoe_shoebox_place2.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Shoe Shoebox Place #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-12" onclick="showIframe('jigsaw_shelf_pick1')">
-                        <img src="./media/thumbnails/jigsaw_shelf_pick1.jpg" alt="Item 1" class="thumbnails">
+                        <img src="./media/thumbnails/jigsaw_shelf_pick1.jpeg" alt="Item 1" class="thumbnails">
                         <!-- <br>
                           Jigsaw Shelf Pick #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-13" onclick="showIframe('jigsaw_shelf_place1')">
-                        <img src="./media/thumbnails/jigsaw_shelf_place1.jpg" alt="Item 1" class="thumbnails">
+                        <img src="./media/thumbnails/jigsaw_shelf_place1.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br>
                           Jigsaw Shelf Place #1 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-14" onclick="showIframe('jigsaw_shelf_pick2')">
-                          <img src="./media/thumbnails/jigsaw_shelf_pick2.jpg" alt="Item 1" class="thumbnails">
+                          <img src="./media/thumbnails/jigsaw_shelf_pick2.jpeg" alt="Item 1" class="thumbnails">
                           <!-- <br> 
                           Jigsaw Shelf Pick #2 -->
                       </button>
                   </div>
                   <div class="thumbnail-col">
                       <button class="thumbnail-btn" id="thumb-15" onclick="showIframe('jigsaw_shelf_place2')">
-                        <img src="./media/thumbnails/jigsaw_shelf_place2.jpg" alt="Item 1" class="thumbnails">
+                        <img src="./media/thumbnails/jigsaw_shelf_place2.jpeg" alt="Item 1" class="thumbnails">
                         <!-- <br> 
                           Jigsaw Shelf Place #2 -->
                       </button>
